# cot-coherence

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cot_coherence/: __init__.py  analyzer.py  cli.py  config.py  horizon.py  llm.py  models.py  parser.py  scoring.py
cot_coherence/detectors/: __init__.py  base.py  circular_return.py  conclusion_drift.py  confidence_inflation.py  premise_abandonment.py  scope_creep.py
examples/: analyze_o1_trace.py  basic_usage.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_horizon.py  test_llm.py  test_parser.py  test_scoring.py
tests/fixtures/: circular_return_trace.txt  clean_trace.txt  conclusion_drift_trace.txt  confidence_inflation_trace.txt  multi_issue_trace.txt  premise_abandonment_trace.txt  scope_creep_trace.txt
tests/test_detectors/: test_circular_return.py  test_conclusion_drift.py  test_confidence_inflation.py  test_premise_abandonment.py  test_scope_creep.py
